# polynomial-solver

./: Cargo.toml
src/: lib.rs
src/polynomial/: circuit.rs  division.rs  mod.rs
