[package]
name = "polynomial-solver"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "monitoring"
harness = false

[dev-dependencies]
num = "0.4.0"
libc = "0.2"
regex = "1"
lazy_static = "1.4"
csv = "1.1"
serde = "1.0"
walkdir = "2"

[dependencies]
mimalloc = { version = "*", default-features = false }
num-traits = "0.2"
itertools = "0.10.1"
zokrates_core = { git = "https://github.com/Zokrates/ZoKrates.git", rev = "048221bafd2cf808cad0b4c380f"}
zokrates_field = { git = "https://github.com/Zokrates/ZoKrates.git", rev = "048221bafd2cf808cad0b4c380f" }
clap = { version = "4.0", features = ["derive"] }
pest = "2.0"
pest_derive = "2.0"
bitvec = "1"
rand = "0.8"
r1cs-file = { git = "https://github.com/lvella/zeropool-utils.git" }
num-bigint = { version = "0.4", features = [ "rand" ] }
polyexen = { path = "../polyexen" }
zkevm-circuits = { path = "../zkevm-circuits/zkevm-circuits", features = ["test"] }
bus-mapping = { path = "../zkevm-circuits/bus-mapping", features = ["test"] }
mock = { path = "../zkevm-circuits/mock" }
eth-types = { path = "../zkevm-circuits/eth-types" }
halo2_proofs = "0.2"
env_logger = "0.9"

[dependencies.rug]
version = "1.13"
default-features = false
features = ["integer","float"]

[profile.release]
lto = "thin"

[profile.release-with-debug]
inherits = "release"
debug = true

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { path = "../halo2/halo2_proofs" }

[patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
halo2wrong = { path = "../halo2wrong/halo2wrong" }

[patch.crates-io]
halo2_proofs = { path = "../halo2/halo2_proofs" }

